feat: support parcel metadata and soft delete
